<?xml version="1.0" encoding="utf-8"?>
<!-- Para iniciar se define el tipo de contenedor en este caso LinearLayout que debe abrir con parentesis < triangular y cerrar con </ al final -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/SENA"
        android:textColorLink="@color/SENA"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="231dp"
        android:layout_height="291dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_sena" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/btn_email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/btn_pass"
        android:inputType="textPassword"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/SENA"
        android:text="@string/btnlogin"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/gogle"
        android:text="@string/btnlogingo"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/faceboock"
        android:text="@string/btnloginfa"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRECU"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>